--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,11 @@
+--index-url https://pypi.org/simple
 --extra-index-url https://download.pytorch.org/whl/cpu
-torch
+
+torch==2.3.1+cpu
 transformers==4.44.2
 sentencepiece
 pydantic==2.8.2
 pandas==2.2.2
 python-docx
-streamlit
+streamlit==1.36.0
 
